--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,64 +9,64 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Regression</th></tr>
-<tr><td><a href="#t0">Group 2</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">51</td><td></td><td></td></tr>
-<tr class="stripe"><td><a href="#t1">Group 4</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">48</td><td></td><td></td></tr>
-<tr><td><a href="#t2">Group 3</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">45</td><td></td><td></td></tr>
-<tr class="stripe"><td><a href="#t3">Group 1</a></td><td class="num">3</td><td class="num attn">5</td><td class="num">0</td><td class="num attn">2</td><td class="num">381</td><td></td><td></td></tr>
-<tr><th>Total</th><th class="num">3</th><th class="num attn">5</th><th class="num">0</th><th class="num attn">2</th><th class="num">525</th><th colspan="2"></th></tr>
+<tr><td><a href="#t0">Group 3</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">27</td><td></td><td></td></tr>
+<tr class="stripe"><td><a href="#t1">Group 2</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">31</td><td></td><td></td></tr>
+<tr><td><a href="#t2">Group 4</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">30</td><td></td><td></td></tr>
+<tr class="stripe"><td><a href="#t3">Group 1</a></td><td class="num">3</td><td class="num attn">5</td><td class="num">0</td><td class="num attn">2</td><td class="num">352</td><td></td><td></td></tr>
+<tr><th>Total</th><th class="num">3</th><th class="num attn">5</th><th class="num">0</th><th class="num attn">2</th><th class="num">440</th><th colspan="2"></th></tr>
 </table>
 <table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Regression</th></tr></tbody><tbody id="t0"><tr><th colspan="4" class="invisible"/></tr></tbody>
 <tbody id="t1"><tr><th colspan="4" class="invisible"/></tr></tbody>
 <tbody id="t2"><tr><th colspan="4" class="invisible"/></tr></tbody>
-<tbody id="t3"><tr><th colspan="4">Group 1 &#8212; failed (configuration methods)</th></tr><tr class="failedeven"><td rowspan="1">test.global.footer.FooterTest</td><td><a href="#m0">captureScreenshot</a></td><td rowspan="1">1663681186642</td><td rowspan="1">3</td></tr><tr><th colspan="4">Group 1 &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">test.global.footer.FooterTest</td><td><a href="#m1">testFooterCategoryPage</a></td><td rowspan="1">1663681186619</td><td rowspan="1">14</td></tr><tr class="failedodd"><td rowspan="1">test.global.footer.FooterTestByTestNG</td><td><a href="#m2">testFooterHomePage</a></td><td rowspan="1">1663681186715</td><td rowspan="1">5</td></tr><tr><th colspan="4">Group 1 &#8212; skipped (configuration methods)</th></tr><tr class="skippedeven"><td rowspan="3">test.global.footer.FooterTest</td><td><a href="#m3">captureScreenshot</a></td><td rowspan="3">1663681186688</td><td rowspan="3">0</td></tr><tr class="skippedeven"><td><a href="#m4">captureScreenshot</a></td></tr><tr class="skippedeven"><td><a href="#m5">captureScreenshot</a></td></tr><tr><th colspan="4">Group 1 &#8212; skipped</th></tr><tr class="skippedeven"><td rowspan="1">test.computer.BuyingCheapComputerTest</td><td><a href="#m6">testBuyingCheapComputer</a></td><td rowspan="1">1663681186479</td><td rowspan="1">0</td></tr><tr class="skippedodd"><td rowspan="1">test.computer.BuyingStandardComputerTest</td><td><a href="#m7">testBuyingStandardComputer</a></td><td rowspan="1">1663681186604</td><td rowspan="1">0</td></tr><tr class="skippedeven"><td rowspan="3">test.global.footer.FooterTest</td><td><a href="#m8">testFooterHomePage</a></td><td rowspan="1">1663681186660</td><td rowspan="1">0</td></tr><tr class="skippedeven"><td><a href="#m9">testFooterLoginPage</a></td><td rowspan="1">1663681186671</td><td rowspan="1">0</td></tr><tr class="skippedeven"><td><a href="#m10">testFooterRegisterPage</a></td><td rowspan="1">1663681186681</td><td rowspan="1">0</td></tr><tr><th colspan="4">Group 1 &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">test.global.footer.FooterTestByTestNG</td><td><a href="#m11">testFooterCategoryPage</a></td><td rowspan="1">1663681186702</td><td rowspan="1">11</td></tr><tr class="passedeven"><td><a href="#m12">testFooterLoginPage</a></td><td rowspan="1">1663681186690</td><td rowspan="1">2</td></tr><tr class="passedeven"><td><a href="#m13">testFooterRegisterPage</a></td><td rowspan="1">1663681186695</td><td rowspan="1">1</td></tr></tbody>
+<tbody id="t3"><tr><th colspan="4">Group 1 &#8212; failed (configuration methods)</th></tr><tr class="failedeven"><td rowspan="1">test.global.footer.FooterTest</td><td><a href="#m0">captureScreenshot</a></td><td rowspan="1">1664334666032</td><td rowspan="1">4</td></tr><tr><th colspan="4">Group 1 &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">test.global.footer.FooterTest</td><td><a href="#m1">testFooterCategoryPage</a></td><td rowspan="1">1664334666012</td><td rowspan="1">16</td></tr><tr class="failedodd"><td rowspan="1">test.global.footer.FooterTestByTestNG</td><td><a href="#m2">testFooterHomePage</a></td><td rowspan="1">1664334666092</td><td rowspan="1">2</td></tr><tr><th colspan="4">Group 1 &#8212; skipped (configuration methods)</th></tr><tr class="skippedeven"><td rowspan="3">test.global.footer.FooterTest</td><td><a href="#m3">captureScreenshot</a></td><td rowspan="3">1664334666066</td><td rowspan="3">0</td></tr><tr class="skippedeven"><td><a href="#m4">captureScreenshot</a></td></tr><tr class="skippedeven"><td><a href="#m5">captureScreenshot</a></td></tr><tr><th colspan="4">Group 1 &#8212; skipped</th></tr><tr class="skippedeven"><td rowspan="1">test.computer.BuyingCheapComputerTest</td><td><a href="#m6">testBuyingCheapComputer</a></td><td rowspan="1">1664334665838</td><td rowspan="1">0</td></tr><tr class="skippedodd"><td rowspan="1">test.computer.BuyingStandardComputerTest</td><td><a href="#m7">testBuyingStandardComputer</a></td><td rowspan="1">1664334665997</td><td rowspan="1">0</td></tr><tr class="skippedeven"><td rowspan="3">test.global.footer.FooterTest</td><td><a href="#m8">testFooterHomePage</a></td><td rowspan="1">1664334666052</td><td rowspan="1">0</td></tr><tr class="skippedeven"><td><a href="#m9">testFooterLoginPage</a></td><td rowspan="1">1664334666057</td><td rowspan="1">0</td></tr><tr class="skippedeven"><td><a href="#m10">testFooterRegisterPage</a></td><td rowspan="1">1664334666064</td><td rowspan="1">0</td></tr><tr><th colspan="4">Group 1 &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">test.global.footer.FooterTestByTestNG</td><td><a href="#m11">testFooterCategoryPage</a></td><td rowspan="1">1664334666074</td><td rowspan="1">15</td></tr><tr class="passedeven"><td><a href="#m12">testFooterLoginPage</a></td><td rowspan="1">1664334666068</td><td rowspan="1">1</td></tr><tr class="passedeven"><td><a href="#m13">testFooterRegisterPage</a></td><td rowspan="1">1664334666072</td><td rowspan="1">1</td></tr></tbody>
 </table>
-<h2>Group 2</h2><h2>Group 4</h2><h2>Group 3</h2><h2>Group 1</h2><h3 id="m0">test.global.footer.FooterTest#captureScreenshot</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>[TestResult name=testFooterCategoryPage status=FAILURE method=FooterTest.testFooterCategoryPage()[pri:0, instance:test.global.footer.FooterTest@22a637e7] output={null}]</td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.IllegalArgumentException: null is not supported!
+<h2>Group 3</h2><h2>Group 2</h2><h2>Group 4</h2><h2>Group 1</h2><h3 id="m0">test.global.footer.FooterTest#captureScreenshot</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>[TestResult name=testFooterCategoryPage status=FAILURE method=FooterTest.testFooterCategoryPage()[pri:0, instance:test.global.footer.FooterTest@61386958] output={null}]</td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.IllegalArgumentException: null is not supported!
 	at driver.DriverFactory.getDriver(DriverFactory.java:49)
 	at test.BaseTest.captureScreenshot(BaseTest.java:66)
-	at java.util.ArrayList.forEach(Unknown Source)
-	at java.util.concurrent.FutureTask.run(Unknown Source)
-	at java.util.concurrent.ThreadPoolExecutor.runWorker(Unknown Source)
-	at java.util.concurrent.ThreadPoolExecutor$Worker.run(Unknown Source)
-	at java.lang.Thread.run(Unknown Source)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
+	at java.base/java.util.concurrent.FutureTask.run(FutureTask.java:264)
+	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1136)
+	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:635)
+	at java.base/java.lang.Thread.run(Thread.java:833)
 ... Removed 23 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m1">test.global.footer.FooterTest#testFooterCategoryPage</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.IllegalArgumentException: null is not supported!
 	at driver.DriverFactory.getDriver(DriverFactory.java:49)
 	at test.BaseTest.getDriver(BaseTest.java:30)
 	at test.global.footer.FooterTest.testFooterCategoryPage(FooterTest.java:14)
-	at java.util.ArrayList.forEach(Unknown Source)
-	at java.util.concurrent.FutureTask.run(Unknown Source)
-	at java.util.concurrent.ThreadPoolExecutor.runWorker(Unknown Source)
-	at java.util.concurrent.ThreadPoolExecutor$Worker.run(Unknown Source)
-	at java.lang.Thread.run(Unknown Source)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
+	at java.base/java.util.concurrent.FutureTask.run(FutureTask.java:264)
+	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1136)
+	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:635)
+	at java.base/java.lang.Thread.run(Thread.java:833)
 ... Removed 18 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m2">test.global.footer.FooterTestByTestNG#testFooterHomePage</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: [ERR] They are different! expected [true] but found [false]
 	at test.global.footer.FooterTestByTestNG.testFooterHomePage(FooterTestByTestNG.java:17)
-	at java.util.ArrayList.forEach(Unknown Source)
-	at java.util.concurrent.FutureTask.run(Unknown Source)
-	at java.util.concurrent.ThreadPoolExecutor.runWorker(Unknown Source)
-	at java.util.concurrent.ThreadPoolExecutor$Worker.run(Unknown Source)
-	at java.lang.Thread.run(Unknown Source)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
+	at java.base/java.util.concurrent.FutureTask.run(FutureTask.java:264)
+	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1136)
+	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:635)
+	at java.base/java.lang.Thread.run(Thread.java:833)
 ... Removed 21 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m3">test.global.footer.FooterTest#captureScreenshot</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m4">test.global.footer.FooterTest#captureScreenshot</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m5">test.global.footer.FooterTest#captureScreenshot</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m6">test.computer.BuyingCheapComputerTest#testBuyingCheapComputer</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.RuntimeException: java.lang.RuntimeException: [ERR] Error while reading the file A:\13.JAVA\selenium-k8-web/src/main/java/test_data/computer/CheapComputerData.json
-	at java.util.ArrayList.forEach(Unknown Source)
-	at java.util.concurrent.FutureTask.run(Unknown Source)
-	at java.util.concurrent.ThreadPoolExecutor.runWorker(Unknown Source)
-	at java.util.concurrent.ThreadPoolExecutor$Worker.run(Unknown Source)
-	at java.lang.Thread.run(Unknown Source)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
+	at java.base/java.util.concurrent.FutureTask.run(FutureTask.java:264)
+	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1136)
+	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:635)
+	at java.base/java.lang.Thread.run(Thread.java:833)
 Caused by: java.lang.RuntimeException: [ERR] Error while reading the file A:\13.JAVA\selenium-k8-web/src/main/java/test_data/computer/CheapComputerData.json
 	at test.test_data.DataObjectBuilder.buildDataObjectFrom(DataObjectBuilder.java:25)
 	at test.computer.BuyingCheapComputerTest.computerData(BuyingCheapComputerTest.java:40)
 	... 20 more
 ... Removed 23 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m7">test.computer.BuyingStandardComputerTest#testBuyingStandardComputer</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.RuntimeException: java.lang.RuntimeException: [ERR] Error while reading the file A:\13.JAVA\selenium-k8-web/src/main/java/test_data/computer/StandardComputerData.json
-	at java.util.ArrayList.forEach(Unknown Source)
-	at java.util.concurrent.FutureTask.run(Unknown Source)
-	at java.util.concurrent.ThreadPoolExecutor.runWorker(Unknown Source)
-	at java.util.concurrent.ThreadPoolExecutor$Worker.run(Unknown Source)
-	at java.lang.Thread.run(Unknown Source)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
+	at java.base/java.util.concurrent.FutureTask.run(FutureTask.java:264)
+	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1136)
+	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:635)
+	at java.base/java.lang.Thread.run(Thread.java:833)
 Caused by: java.lang.RuntimeException: [ERR] Error while reading the file A:\13.JAVA\selenium-k8-web/src/main/java/test_data/computer/StandardComputerData.json
 	at test.test_data.DataObjectBuilder.buildDataObjectFrom(DataObjectBuilder.java:25)
 	at test.computer.BuyingStandardComputerTest.computerData(BuyingStandardComputerTest.java:39)
@@ -75,29 +75,29 @@ Caused by: java.lang.RuntimeException: [ERR] Error while reading the file A:\13.
 <h3 id="m8">test.global.footer.FooterTest#testFooterHomePage</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.IllegalArgumentException: null is not supported!
 	at driver.DriverFactory.getDriver(DriverFactory.java:49)
 	at test.BaseTest.captureScreenshot(BaseTest.java:66)
-	at java.util.ArrayList.forEach(Unknown Source)
-	at java.util.concurrent.FutureTask.run(Unknown Source)
-	at java.util.concurrent.ThreadPoolExecutor.runWorker(Unknown Source)
-	at java.util.concurrent.ThreadPoolExecutor$Worker.run(Unknown Source)
-	at java.lang.Thread.run(Unknown Source)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
+	at java.base/java.util.concurrent.FutureTask.run(FutureTask.java:264)
+	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1136)
+	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:635)
+	at java.base/java.lang.Thread.run(Thread.java:833)
 ... Removed 23 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m9">test.global.footer.FooterTest#testFooterLoginPage</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.IllegalArgumentException: null is not supported!
 	at driver.DriverFactory.getDriver(DriverFactory.java:49)
 	at test.BaseTest.captureScreenshot(BaseTest.java:66)
-	at java.util.ArrayList.forEach(Unknown Source)
-	at java.util.concurrent.FutureTask.run(Unknown Source)
-	at java.util.concurrent.ThreadPoolExecutor.runWorker(Unknown Source)
-	at java.util.concurrent.ThreadPoolExecutor$Worker.run(Unknown Source)
-	at java.lang.Thread.run(Unknown Source)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
+	at java.base/java.util.concurrent.FutureTask.run(FutureTask.java:264)
+	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1136)
+	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:635)
+	at java.base/java.lang.Thread.run(Thread.java:833)
 ... Removed 23 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m10">test.global.footer.FooterTest#testFooterRegisterPage</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.IllegalArgumentException: null is not supported!
 	at driver.DriverFactory.getDriver(DriverFactory.java:49)
 	at test.BaseTest.captureScreenshot(BaseTest.java:66)
-	at java.util.ArrayList.forEach(Unknown Source)
-	at java.util.concurrent.FutureTask.run(Unknown Source)
-	at java.util.concurrent.ThreadPoolExecutor.runWorker(Unknown Source)
-	at java.util.concurrent.ThreadPoolExecutor$Worker.run(Unknown Source)
-	at java.lang.Thread.run(Unknown Source)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
+	at java.base/java.util.concurrent.FutureTask.run(FutureTask.java:264)
+	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1136)
+	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:635)
+	at java.base/java.lang.Thread.run(Thread.java:833)
 ... Removed 23 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m11">test.global.footer.FooterTestByTestNG#testFooterCategoryPage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m12">test.global.footer.FooterTestByTestNG#testFooterLoginPage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
