--- a/test-output/old/Regression/methods.html
+++ b/test-output/old/Regression/methods.html
@@ -1,32 +1,32 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Regression</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="98b989">  <td>22/09/20 20:39:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.captureScreenshot(org.testng.ITestResult)[pri:0, instance:test.global.footer.FooterTest@22a637e7]">&lt;&lt;captureScreenshot</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-2@482082765</td>   <td></td> </tr>
-<tr bgcolor="a37dbf">  <td>22/09/20 20:39:46</td>   <td>-69</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FooterTest.testFooterCategoryPage()[pri:0, instance:test.global.footer.FooterTest@22a637e7]">testFooterCategoryPage</td> 
-  <td>TestNG-tests-2@482082765</td>   <td></td> </tr>
-<tr bgcolor="a465be">  <td>22/09/20 20:39:46</td>   <td>14</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FooterTestByTestNG.testFooterCategoryPage()[pri:1, instance:test.global.footer.FooterTestByTestNG@6fe7aac8]">testFooterCategoryPage</td> 
-  <td>TestNG-tests-2@482082765</td>   <td></td> </tr>
-<tr bgcolor="a37dbf">  <td>22/09/20 20:39:46</td>   <td>-7</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FooterTest.testFooterRegisterPage()[pri:0, instance:test.global.footer.FooterTest@22a637e7]">testFooterRegisterPage</td> 
-  <td>TestNG-tests-2@482082765</td>   <td></td> </tr>
-<tr bgcolor="a37dbf">  <td>22/09/20 20:39:46</td>   <td>-17</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FooterTest.testFooterLoginPage()[pri:0, instance:test.global.footer.FooterTest@22a637e7]">testFooterLoginPage</td> 
-  <td>TestNG-tests-2@482082765</td>   <td></td> </tr>
-<tr bgcolor="98b989">  <td>22/09/20 20:39:46</td>   <td>-281</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.initBrowserSession(java.lang.String)[pri:0, instance:test.BaseTest@2ea227af]">&gt;&gt;initBrowserSession</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@482082765</td>   <td></td> </tr>
-<tr bgcolor="a37dbf">  <td>22/09/20 20:39:46</td>   <td>-28</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FooterTest.testFooterHomePage()[pri:0, instance:test.global.footer.FooterTest@22a637e7]">testFooterHomePage</td> 
-  <td>TestNG-tests-2@482082765</td>   <td></td> </tr>
-<tr bgcolor="98b989">  <td>22/09/20 20:39:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.captureScreenshot(org.testng.ITestResult)[pri:0, instance:test.global.footer.FooterTest@22a637e7]">&lt;&lt;captureScreenshot</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-2@482082765</td>   <td></td> </tr>
-<tr bgcolor="a465be">  <td>22/09/20 20:39:46</td>   <td>2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FooterTestByTestNG.testFooterLoginPage()[pri:0, instance:test.global.footer.FooterTestByTestNG@6fe7aac8]">testFooterLoginPage</td> 
-  <td>TestNG-tests-2@482082765</td>   <td></td> </tr>
-<tr bgcolor="98b989">  <td>22/09/20 20:39:46</td>   <td>37</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeBrowserSession()[pri:0, instance:test.BaseTest@2ea227af]">&lt;&lt;closeBrowserSession</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@482082765</td>   <td></td> </tr>
-<tr bgcolor="98b989">  <td>22/09/20 20:39:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.captureScreenshot(org.testng.ITestResult)[pri:0, instance:test.global.footer.FooterTest@22a637e7]">&lt;&lt;captureScreenshot</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-2@482082765</td>   <td></td> </tr>
-<tr bgcolor="98b989">  <td>22/09/20 20:39:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.captureScreenshot(org.testng.ITestResult)[pri:0, instance:test.global.footer.FooterTest@22a637e7]">&lt;&lt;captureScreenshot</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-2@482082765</td>   <td></td> </tr>
-<tr bgcolor="a465be">  <td>22/09/20 20:39:46</td>   <td>27</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FooterTestByTestNG.testFooterHomePage()[pri:2, instance:test.global.footer.FooterTestByTestNG@6fe7aac8]">testFooterHomePage</td> 
-  <td>TestNG-tests-2@482082765</td>   <td></td> </tr>
-<tr bgcolor="a465be">  <td>22/09/20 20:39:46</td>   <td>7</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FooterTestByTestNG.testFooterRegisterPage()[pri:0, instance:test.global.footer.FooterTestByTestNG@6fe7aac8]">testFooterRegisterPage</td> 
-  <td>TestNG-tests-2@482082765</td>   <td></td> </tr>
+<tr bgcolor="8b6791">  <td>22/09/28 10:11:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.captureScreenshot(org.testng.ITestResult)[pri:0, instance:test.global.footer.FooterTest@61386958]">&lt;&lt;captureScreenshot</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@1063980005</td>   <td></td> </tr>
+<tr bgcolor="7c60d0">  <td>22/09/28 10:11:06</td>   <td>2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FooterTestByTestNG.testFooterLoginPage()[pri:0, instance:test.global.footer.FooterTestByTestNG@73ee04c8]">testFooterLoginPage</td> 
+  <td>TestNG-tests-2@1063980005</td>   <td></td> </tr>
+<tr bgcolor="8b6791">  <td>22/09/28 10:11:05</td>   <td>-277</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.initBrowserSession(java.lang.String)[pri:0, instance:test.BaseTest@2892dae4]">&gt;&gt;initBrowserSession</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@1063980005</td>   <td></td> </tr>
+<tr bgcolor="7c60d0">  <td>22/09/28 10:11:06</td>   <td>8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FooterTestByTestNG.testFooterCategoryPage()[pri:1, instance:test.global.footer.FooterTestByTestNG@73ee04c8]">testFooterCategoryPage</td> 
+  <td>TestNG-tests-2@1063980005</td>   <td></td> </tr>
+<tr bgcolor="7c60d0">  <td>22/09/28 10:11:06</td>   <td>6</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FooterTestByTestNG.testFooterRegisterPage()[pri:0, instance:test.global.footer.FooterTestByTestNG@73ee04c8]">testFooterRegisterPage</td> 
+  <td>TestNG-tests-2@1063980005</td>   <td></td> </tr>
+<tr bgcolor="8b6791">  <td>22/09/28 10:11:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.captureScreenshot(org.testng.ITestResult)[pri:0, instance:test.global.footer.FooterTest@61386958]">&lt;&lt;captureScreenshot</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@1063980005</td>   <td></td> </tr>
+<tr bgcolor="679097">  <td>22/09/28 10:11:06</td>   <td>-54</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FooterTest.testFooterCategoryPage()[pri:0, instance:test.global.footer.FooterTest@61386958]">testFooterCategoryPage</td> 
+  <td>TestNG-tests-2@1063980005</td>   <td></td> </tr>
+<tr bgcolor="8b6791">  <td>22/09/28 10:11:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.captureScreenshot(org.testng.ITestResult)[pri:0, instance:test.global.footer.FooterTest@61386958]">&lt;&lt;captureScreenshot</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@1063980005</td>   <td></td> </tr>
+<tr bgcolor="679097">  <td>22/09/28 10:11:06</td>   <td>-9</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FooterTest.testFooterLoginPage()[pri:0, instance:test.global.footer.FooterTest@61386958]">testFooterLoginPage</td> 
+  <td>TestNG-tests-2@1063980005</td>   <td></td> </tr>
+<tr bgcolor="8b6791">  <td>22/09/28 10:11:06</td>   <td>30</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeBrowserSession()[pri:0, instance:test.BaseTest@2892dae4]">&lt;&lt;closeBrowserSession</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@1063980005</td>   <td></td> </tr>
+<tr bgcolor="679097">  <td>22/09/28 10:11:06</td>   <td>-16</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FooterTest.testFooterHomePage()[pri:0, instance:test.global.footer.FooterTest@61386958]">testFooterHomePage</td> 
+  <td>TestNG-tests-2@1063980005</td>   <td></td> </tr>
+<tr bgcolor="8b6791">  <td>22/09/28 10:11:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.captureScreenshot(org.testng.ITestResult)[pri:0, instance:test.global.footer.FooterTest@61386958]">&lt;&lt;captureScreenshot</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@1063980005</td>   <td></td> </tr>
+<tr bgcolor="679097">  <td>22/09/28 10:11:06</td>   <td>-3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FooterTest.testFooterRegisterPage()[pri:0, instance:test.global.footer.FooterTest@61386958]">testFooterRegisterPage</td> 
+  <td>TestNG-tests-2@1063980005</td>   <td></td> </tr>
+<tr bgcolor="7c60d0">  <td>22/09/28 10:11:06</td>   <td>26</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FooterTestByTestNG.testFooterHomePage()[pri:2, instance:test.global.footer.FooterTestByTestNG@73ee04c8]">testFooterHomePage</td> 
+  <td>TestNG-tests-2@1063980005</td>   <td></td> </tr>
 </table>
